<!--
Copyright 2020, 2021, Ludovic Henry

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

Please contact git@ludovic.dev or visit ludovic.dev if you need additional
information or have any questions.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.ludovic.netlib</groupId>
  <artifactId>parent</artifactId>
  <version>3-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Netlib</name>
  <description>Implementation of the Netlib APIs in Java using hardware acceleration.</description>
  <url>http://github.com/luhenry/blas</url>

  <licenses>
    <license>
      <name>MIT</name>
      <url>https://opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Ludovic Henry</name>
      <email>git@ludovic.dev</email>
      <organization>ludovic.dev</organization>
      <organizationUrl>blog.ludovic.dev</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/luhenry/netlib.git</connection>
    <developerConnection>scm:git:ssh://github.com:luhenry/netlib.git</developerConnection>
    <url>http://github.com/luhenry/netlib/tree/master</url>
  </scm>

  <modules>
    <module>blas</module>
    <module>lapack</module>
    <module>arpack</module>
    <module>benchmarks</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <javac.target>8</javac.target>
    <jvm.modules></jvm.modules>
    <argLine></argLine>
    <automatic.module.name>dev.ludovic.netlib</automatic.module.name>
  </properties>

  <profiles>
    <profile>
      <id>vector</id>
      <activation>
        <jdk>[16,</jdk>
      </activation>
      <properties>
        <jvm.modules>--add-modules=jdk.incubator.vector</jvm.modules>
        <argLine>${jvm.modules}</argLine>
      </properties>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.6</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
            <configuration>
              <excludes>
                <exclude>**/META-INF/versions/**</exclude>
              </excludes>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.8.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <autoPublish>true</autoPublish>
          <waitUntil>published</waitUntil>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <compilerVersion>${javac.target}</compilerVersion>
            <source>${javac.target}</source>
            <target>${javac.target}</target>
            <compilerArgs>
              <arg>-h</arg><arg>${project.build.directory}/include</arg>
            </compilerArgs>
          </configuration>
          <executions>
            <!-- Compile Java 11 specific sources -->
            <execution>
              <id>compile-java11</id>
              <phase>compile</phase>
              <goals>
                <goal>compile</goal>
              </goals>
              <configuration>
                <release>11</release>
                <compileSourceRoots>
                  <compileSourceRoot>${project.basedir}/src/main/java11</compileSourceRoot>
                </compileSourceRoots>
                <outputDirectory>${project.build.outputDirectory}/META-INF/versions/11</outputDirectory>
              </configuration>
            </execution>
            <!-- Compile Java 16 specific sources -->
            <execution>
              <id>compile-java16</id>
              <phase>compile</phase>
              <goals>
                <goal>compile</goal>
              </goals>
              <configuration>
                <release>16</release>
                <compileSourceRoots>
                  <compileSourceRoot>${project.basedir}/src/main/java16</compileSourceRoot>
                </compileSourceRoots>
                <compilerArgs>
                  <arg>--add-modules=jdk.incubator.vector</arg>
                </compilerArgs>
                <outputDirectory>${project.build.outputDirectory}/META-INF/versions/16</outputDirectory>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.4</version>
          <configuration>
            <archive>
              <manifestEntries>
                <Automatic-Module-Name>${automatic.module.name}</Automatic-Module-Name>
                <Multi-Release>true</Multi-Release>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.2.0</version>
          <configuration>
            <additionalJOptions>
              <additionalJOption>${jvm.modules}</additionalJOption>
            </additionalJOptions>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.3</version>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.2.4</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.3</version>
          <configuration>
              <reportFormat>plain</reportFormat>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>1.5</version>
        </plugin>
        <plugin>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>3.0.0</version>
          <executions>
            <execution>
              <phase>compile</phase>
              <goals>
                <goal>run</goal>
              </goals>
              <configuration>
                <target>
                  <exec executable="make" dir="${project.basedir}/src/main/native" failonerror="true">
                    <arg line="INPUTS='jni.c'"/>
                    <arg line="OUTPUT='${project.build.directory}/native/Linux-amd64/libnetlib${project.artifactId}jni.so'"/>
                    <arg line="OBJDIR='${project.build.directory}/objs/Linux-amd64'"/>
                    <arg line="CC='x86_64-linux-gnu-gcc'"/>
                    <arg line="CCFLAGS='-c -Werror -Wall -Wextra -Wno-unused-label -O2 -fPIC -I${project.build.directory}/include -I${JAVA_HOME}/include -I${JAVA_HOME}/include/linux'"/>
                    <arg line="LD='x86_64-linux-gnu-gcc'"/>
                    <arg line="LDFLAGS='-shared'"/>
                    <arg line="all"/>
                  </exec>
                  <exec executable="make" dir="${project.basedir}/src/main/native" failonerror="true">
                    <arg line="INPUTS='jni.c'"/>
                    <arg line="OUTPUT='${project.build.directory}/native/Linux-aarch64/libnetlib${project.artifactId}jni.so'"/>
                    <arg line="OBJDIR='${project.build.directory}/objs/Linux-aarch64'"/>
                    <arg line="CC='aarch64-linux-gnu-gcc'"/>
                    <arg line="CCFLAGS='-c -Werror -Wall -Wextra -Wno-unused-label -O2 -fPIC -I${project.build.directory}/include -I${JAVA_HOME}/include -I${JAVA_HOME}/include/linux'"/>
                    <arg line="LD='aarch64-linux-gnu-gcc'"/>
                    <arg line="LDFLAGS='-shared'"/>
                    <arg line="all"/>
                  </exec>
                  <exec executable="make" dir="${project.basedir}/src/main/native" failonerror="true">
                    <arg line="INPUTS='jni.c'"/>
                    <arg line="OUTPUT='${project.build.directory}/native/Linux-riscv64/libnetlib${project.artifactId}jni.so'"/>
                    <arg line="OBJDIR='${project.build.directory}/objs/Linux-riscv64'"/>
                    <arg line="CC='riscv64-linux-gnu-gcc'"/>
                    <arg line="CCFLAGS='-c -Werror -Wall -Wextra -Wno-unused-label -O2 -fPIC -I${project.build.directory}/include -I${JAVA_HOME}/include -I${JAVA_HOME}/include/linux'"/>
                    <arg line="LD='riscv64-linux-gnu-gcc'"/>
                    <arg line="LDFLAGS='-shared'"/>
                    <arg line="all"/>
                  </exec>
                </target>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.2.0</version>
          <executions>
            <execution>
              <id>copy-resources</id>
              <phase>process-classes</phase>
              <goals>
                <goal>copy-resources</goal>
              </goals>
              <configuration>
                <outputDirectory>${project.build.outputDirectory}/resources/native</outputDirectory>
                <resources>
                  <resource>
                    <directory>${project.build.directory}/native</directory>
                    <filtering>false</filtering>
                  </resource>
                </resources>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <distributionManagement>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>
</project>
